Archive2/01/de268a89e2e0d1/output
main.cpp: In function 'int main()':
main.cpp:7:8: error: expected identifier before 'int'
     b.~int();
        ^
