Archive2/01/de268a89e2e0d1/main.cpp
using A = int;

int main() {
    A a;
    a.~A();
    int b;
    b.~int();
}